--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "he": "^1.2.0",
     "react": "^19.1.1",
     "react-confetti": "^6.4.0",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-loading-indicators": "^1.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
